<resources>
    <string name="app_name">TimeManager</string>
    <string name="report_name">Times Report</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Fragment</string>
    <string name="second_fragment_label">Users Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="close_txt">x</string>
    <string name="hours_lbl">h</string>
    <string name="alert_title_confirm_delete">Confirm deletion</string>
    <string name="alert_message_confirm_delete">Are you sure do you want to delete this entry?</string>
    <string name="alert_title_add_entry">Add Time Log</string>
    <string name="alert_title_edit_entry_hours">Edit entry hours</string>
    <string name="alert_title_edit_entry_description">Edit entry description</string>
    <string name="hours_hint">6.0</string>
    <string name="description_hint">Your notes..</string>
    <string name="error_empty_hours">Abort: Hours cannot be empty or less than %sh</string>
    <string name="error_not_admin">Only admins can access this functionality</string>
    <string name="date_label">Date:</string>
    <string name="settings_title">Settings: Preferred hours</string>
    <string name="error_empty_preferred_hours">Preferred hours cannot be blank. use e.g.: 6.0</string>
    <string name="error_update_preferred_hours">Failed to update preferred hours, please try again.</string>
    <string name="error_max_preferred_hours">Working more than %s hours a day is not permitted.</string>
    <string name="error_min_preferred_hours">Your preferred working hours cannot be less than %s</string>
    <string name="no_items_error">You have no entries, please add your first one!</string>
    <string name="date_from_label">From:</string>
    <string name="date_to_label">To:</string>
    <string name="filter_label">Dates</string>
    <string name="action_report">Report</string>
    <string name="action_users">Users</string>
    <string name="email_hint">your@email.com</string>
    <string name="name_hint">Your Name</string>
    <string name="alert_title_add_user">Add User</string>
    <string name="password_hint">Password</string>
    <string name="error_empty_user_email">User email cannot be empty</string>
    <string name="error_empty_user_password">User password cannot be less than 6 characters</string>
    <string name="alert_title_edit_user">Edit User</string>
    <string name="role_label">Role:</string>
    <string name="title_activity_login">Login TimeManager</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="prompt_preferred_hours">Preferred working hours</string>
    <string name="action_dont_have_account">I do not have an account</string>
    <string name="action_sign_in">Register and Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome %s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="action_logout">Logout</string>
</resources>