<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginEnd="@dimen/default_padding">
        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/date_label"/>

        <TextView
            android:id="@+id/dateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/date_label"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_centerVertical="true"
            android:text="@string/date_label"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_margin="@dimen/default_padding">

        <AutoCompleteTextView
            android:id="@+id/hoursInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:hint="@string/hours_hint"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_margin="@dimen/default_padding">

        <AutoCompleteTextView
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:hint="@string/description_hint"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>